# chocotrade

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_ENG.md  proto.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: brew_release.yml  lint.yml  pylint.yml  python-package.yml
chocotrade/: __init__.py  __main__.py  backtest.py  ipython.py  main.py  utilities.py
chocotrade/base/: database.py  gateway.py  plugin.py  restapi.py  strategy.py  websocket.py
chocotrade/client/: __init__.py  client.py  qt_client.py  textual_client.py
chocotrade/client/qt/cards/: __init__.py  backtest_outcome_card.py  dashboard_active_strategies_card.py  dashboard_backtest_card.py  dashboard_infra_card.py  dashboard_live_log_card.py  dashboard_portfolio_card.py  marketdata_active_recoding_card.py  marketdata_capture_stream_card.py  marketdata_local_data_browser_card.py  marketdata_selection_card.py  marketdata_storage_card.py
chocotrade/client/qt/dialogs/: backtest_report_dialog.py  backtest_start_dialog.py  marketdata_download_dialog.py  plugin_config_dialog.py
chocotrade/client/qt/pages/: backtest_page.py  dashboard_page.py  marketdata_page.py  plugins_page.py  research_page.py
chocotrade/client/texutal/: widgets.py
chocotrade/config/: __init__.py  config.py
chocotrade/core/: constant.py  data_structures.py  datatype.py  engine.py  event.py  plugin_manager.py
chocotrade/data_record/: data_record.py
chocotrade/database/: __init__.py  duckdb_database.py  sqlite_database.py
chocotrade/datasource/: tushare_datasource.py
chocotrade/datastream/: __init__.py  datastream.py
chocotrade/gateways/: okex_gateway.py
chocotrade/llm/: llm.py
chocotrade/locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
chocotrade/protos_generated/: __init__.py  service_pb2.py  service_pb2_grpc.py
chocotrade/server/: __init__.py  rumps_server.py  server.py
chocotrade/strategies/: __init__.py  cta_strategy.py
openclaw/chocotrade/: SKILL.md
protos/: service.proto
src/chocotrade/: __init__.py  main.py
src/cpp_data_structures/: CMakeLists.txt  data_structures.cpp  main.cpp
src/cpp_data_structures/include/: data_structures.h
src/ctp/: CMakeLists.txt  ctpmd.cpp  ctptd.cpp
src/ctp/include/: ctpmd.h  ctptd.h
src/module1/: CMakeLists.txt  main.cpp
tests/: test_basic.py  test_restclient.py  test_websocketclient.py
